04-Jan-2013 C.ThirdpartyModules now have a C.INullOpTool assigned to them, in order for Targets to be fully qualified with a toolset. This is useful because Thirdparty libraries must have been built with a toolset, so should be identifiable.
            Fetching an instance of a Target now requires a non-null Opus.Core.IToolset instance.

03-Jan-2013 Opus.Core.IToolEnvironmentPaths has been removed. Use IToolEnvironmentVariables instead.

02-Jan-2013 Opus.Core.ITool.Executable now takes an Opus.Core.BaseTarget instead of a Target.

20-Dec-2012 Package definition files now accept a relative path to the schema. This avoids problems in earlier versions of Opus that could reference multiple copies of the schema. An exception is now thrown with old style definition files. Running commands again with -forcedefinitionupdate resolves that.

20-Dec-2012 Adding action '-forcedefinitionupdate' which will immediate write out package definition files after they have been read. This can be used to force any updates required in future Opus versions.

16-Dec-2012 Adding support for a package with multiple versions to be valid for a given build (to indicate supported builds). A build must narrow down to a single version though, so a new command Action, <packagename>.version, has been introduced, which can be used to select the version required.

16-Dec-2012 Adding Opus.Core.IActionCommandComparison, for an action that requires a custom command comparison.

27-Nov-2012 Adding in C.ICCompilerOptions.CharacterSet to select the target character set for the compiled code. Support may vary between compilers.

27-Nov-2012 Adding C.IWinImportLibrary interface, that classes implementing C.ILinkerTool also need to implement if they support generating a Windows import library for dynamic libraries.

26-Nov-2012 Adding Opus.Core.Exception constructor that accepts a format string and a variable number of arguments.
