@@ -81,7 +81,7 @@ namespace MakeFileBuilder
             System.Collections.Generic.Dictionary<string, Opus.Core.StringArray> environment = null;
             if (compilerTool is Opus.Core.IToolEnvironmentVariables)
             {
-                environment = (compilerTool as Opus.Core.IToolEnvironmentVariables).Variables(target);
+                environment = (compilerTool as Opus.Core.IToolEnvironmentVariables).Variables((Opus.Core.BaseTarget)target);
             }
             MakeFileData returnData = new MakeFileData(makeFilePath, targetDictionary, variableDictionary, environment);
             success = true;
